<resources>

    <string name="app_name">NalzaroH.SabarreH.Act01</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">&gt;</string>
    <string name="previous">&lt;</string>
    <string name="name">contact name</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Number">Number</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="Edit">Edit</string>

</resources>