<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

	<TextView android:text="@string/Name" 
	          android:id="@+id/textView1" 
	          android:layout_width="wrap_content" 
	          android:layout_height="wrap_content">
	    
	</TextView>

	<EditText android:id="@+id/nameTxt" 
	          android:layout_width="match_parent" 
	          android:layout_height="wrap_content">
       <requestFocus></requestFocus>
	</EditText>
	
	
	<TextView android:text="@string/Email" 
	          android:id="@+id/textView2" 
	          android:layout_width="wrap_content" 
	          android:layout_height="wrap_content">
	</TextView>

	
	<EditText android:id="@+id/emailTxt" 
		      android:layout_width="match_parent" 
		      android:layout_height="wrap_content">
	</EditText>


	<TextView android:text="@string/Number" 
		      android:id="@+id/textView3" 
		      android:layout_width="wrap_content" 
		      android:layout_height="wrap_content">
	</TextView>


	<EditText android:id="@+id/numberTxt" 
	          android:layout_width="match_parent" 
	          android:layout_height="wrap_content">
	</EditText>
	
    <Button android:text="@string/Add" 
            android:id="@+id/addBtn" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
    </Button>
    
    <Button android:text="@string/Delete" 
            android:layout_width="fill_parent" 
            android:id="@+id/deleteBtn" 
            android:layout_height="wrap_content">
    </Button>
    
	<Button android:text="@string/Next" 
	        android:id="@+id/nextBtn" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content">
	</Button>
	
	<Button android:text="@string/Previous" 
	        android:id="@+id/previousBtn"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content">
	</Button>
	
	<Button android:text="@string/Edit" 
	        android:id="@+id/editBtn"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content">
	</Button>
	
</LinearLayout>
